TP-6422: Fix bug with visibility of tab selector component
- due to a change by Justin back in Feb, the internal name
  of the tab selector component has changed from 'tabselector'
  to 'tab-selector'
- fix the css which relies on this name

--- a/assets/stylesheets/components/optional/_tab_selector.scss
+++ b/assets/stylesheets/components/optional/_tab_selector.scss
@@ -20,7 +20,7 @@
   .js & {
     display: inline-block;
   }
-  [data-dough-tabselector-initialised="yes"] & {
+  [data-dough-tab-selector-initialised="yes"] & {
     visibility: visible;
     &.is-active {
       display: inline-block;
